# Pro-Django

./: Makefile  README.md  pyproject.toml
First/: manage.py  settings.py
First/First/settings/: base.py
